# whitenoise-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NEXT.md  README.md  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: README.md
src/: audio.rs  device.rs  main.rs  settings.rs  ui.rs
