[package]
name = "whitenoise"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rand = { version = "0.8", features = ["small_rng"] }
